# lab-rat

./: pyproject.toml  ruff.toml  setup.py
labrat/: __init__.py  experiment.py  orm.py  params.py  state_machine.py  test.py
labrat/examples/: test_experiment.py
labrat/tests/: test_orm.py
