[tool.poetry]
name = "labrat"
version = "0.1.0"
description = "A framework for running experiments in parallel."
authors = ["Jeremy Silver <jeremys@nessiness.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "*"
toml = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
